actualizar ruta de imagenes

--- a/src/components/Services.astro
+++ b/src/components/Services.astro
@@ -4,17 +4,17 @@ const services = [
  {
    title: 'Música para la transformación',
    description: 'Vive la magia de melodías para potenciar tu concentración y estado mental. Cada composición está seleccionada para amplificar tu energía, elevar tu concentración y acelerar tus logros. La banda sonora perfecta para tu camino hacia tu mejor versión.',
-   image: 'src/assets/music.jpeg'
+   image: '/public/music.jpeg'
  },
  {
    title: 'Aromas que inspiran',
    description: 'Activa tu máximo potencial con fragancias exclusivas que marcan tus momentos de evolución cuántica. Estas esencias únicas despiertan tu mejor versión, creando memorias positivas que podrás revivir para alcanzar tus metas.',
-   image: 'src/assets/aroma.jpeg'
+   image: '/public/aroma.jpeg'
  },
  {
    title: 'Iluminación Cuántica',
    description: 'Imagina tener un guía personal que evoluciona contigo, disponible en cada momento decisivo de tu transformación. Tu Asistente Virtual Inteligente no es solo tecnología - es tu compañero de crecimiento, tu mentor personalizado y tu catalizador de éxito.',
-   image: 'src/assets/mentor.jpeg'
+   image: '/public/mentor.jpeg'
  }
 ];
 ---
