--- a/src/components/Author.astro
+++ b/src/components/Author.astro
@@ -3,7 +3,7 @@
 <section class="bg-blue-900/20 rounded-xl p-8 mb-16">
   <div class="grid md:grid-cols-2 items-center gap-8">
     <div class="flex justify-end">
-      <img src="src/assets/author.jpeg" alt="Autor" class="w-32 h-32 rounded-full"/>
+      <img src="public/author.jpeg" alt="Autor" class="w-32 h-32 rounded-full"/>
     </div>
     <div>
       <h2 class="text-2xl font-bold mb-4">Sobre el Autor</h2>
