--- a/src/components/BookPreview.astro
+++ b/src/components/BookPreview.astro
@@ -21,7 +21,7 @@
         <svg class="w-5 h-5 text-green-500" fill="currentColor" viewBox="0 0 20 20">
           <path d="M16.707 5.293a1 1 0 010 1.414l-8 8a1 1 0 01-1.414 0l-4-4a1 1 0 011.414-1.414L8 12.586l7.293-7.293a1 1 0 011.414 0z"/>
         </svg>
-        <span>* Descubre el poder del observador consciente</span>
+        <span>Descubre el poder del observador consciente</span>
       </li>
       <li class="flex items-center gap-2 hover:translate-x-2 transition-transform">
         <svg class="w-5 h-5 text-green-500" fill="currentColor" viewBox="0 0 20 20">
