--- a/src/components/Author.astro
+++ b/src/components/Author.astro
@@ -3,11 +3,17 @@
 <section class="bg-blue-900/20 rounded-xl p-8 mb-16">
   <div class="grid md:grid-cols-2 items-center gap-20">
     <div class="flex justify-end">
-      <img src="/autor.jpeg" alt="Autor" class="w-32 h-32 rounded-full"/>
+      <div class="w-48 h-48 rounded-full overflow-hidden">
+        <img 
+          src="/autor1.jpg" 
+          alt="Autor" 
+          class="w-full h-full object-cover object-center"
+        />
+      </div>
     </div>
     <div>
       <h2 class="text-2xl font-bold mb-4">Sobre el Autor</h2>
       <p class="text-gray-300">Marcus Nova es un innovador que fusiona la ciencia de vanguardia con el desarrollo personal. Su extraordinaria trayectoria en el conocimiento neurocognitiva y transformación humana le ha permitido crear el "Código Cuántico del Éxito", un método revolucionario que integra física cuántica y tecnologías emergentes. Su enfoque único ha ayudado a una gran cantidad de personas a desbloquear su máximo potencial, convirtiendo la incertidumbre en una poderosa herramienta de transformación.</p>
     </div>
   </div>
- </section>
+</section>
