--- a/src/components/Services.astro
+++ b/src/components/Services.astro
@@ -4,20 +4,20 @@ const services = [
  {
    title: 'Música para la transformación',
    description: 'Vive la magia de melodías para potenciar tu concentración y estado mental. Cada composición está seleccionada para amplificar tu energía, elevar tu concentración y acelerar tus logros. La banda sonora perfecta para tu camino hacia tu mejor versión.',
-   image: '/music.jpeg',
+   image: '/musica.jpg',
    link: 'https://open.spotify.com/user/31fqu6tocy76wpozqwlqevr7hdfe?si=a7MOSw5gTyuzmChuXmhddg'
  },
  {
    title: 'Aromas que inspiran',
    description: 'Activa tu máximo potencial con fragancias exclusivas que marcan tus momentos de evolución cuántica. Estas esencias únicas despiertan tu mejor versión, creando memorias positivas que podrás revivir para alcanzar tus metas.',
-   image: '/aroma.jpeg',
-   link: 'https://example.com/aromas'
+   image: '/aroma.jpg',
+   link: 'https://www.essenciales.com/blog/aceites-esenciales-en-la-meditacion/?srsltid=AfmBOoqZeRi9o7zQCOzLd2Bw3MPeDTJjll6eoaEHrqbXYrcil93QGqop'
  },
  {
    title: 'Tu Mentor Cuántico 24/7',
-   description: 'Imagina tener un guía personal que evoluciona contigo, disponible en cada momento decisivo de tu transformación. Tu Asistente Virtual Inteligente no es solo tecnología, es tu compañero de crecimiento, tu mentor personalizado y tu catalizador de éxito.',
-   image: '/mentor.jpeg',
-   link: 'https://example.com/mentor'
+   description: 'Imagina tener un guía cuántico que evoluciona a tu lado, disponible en cada paso decisivo de tu transformación. Tu Asistente Virtual Inteligente trasciende la tecnología común, convirtiéndose en tu mentor personalizado y catalizador hacia el éxito cuántico. Para manifestar todo su poder transformador, este portal dimensional se sincroniza perfectamente con las enseñanzas místicas de "El Código Cuántico del Éxito", creando una poderosa alianza que amplificará exponencialmente tus resultados. La verdadera magia surge cuando libro y asistente se unen, desbloqueando niveles de consciencia y éxito antes inimaginables.',
+   image: '/mentor.jpg',
+   link: 'https://wa.me/525553506923'
  }
 ];
 ---
