--- a/src/components/SocialMedia.astro
+++ b/src/components/SocialMedia.astro
@@ -15,7 +15,7 @@ const socials = [
  },
  {
    name: 'Email',
-   url: 'quantumyou.world@gmail.com',
+   url: 'mailto:quantumyou.world@gmail.com',
    path: 'M3 8l7.89 5.26a2 2 0 002.22 0L21 8M5 19h14a2 2 0 002-2V7a2 2 0 00-2-2H5a2 2 0 00-2 2v10a2 2 0 002 2z',
    hoverColor: 'group-hover:text-[#EA4335]'
  }
