--- a/src/components/Hero.astro
+++ b/src/components/Hero.astro
@@ -12,6 +12,8 @@
   <p class="text-gray-300 mb-8 max-w-2xl mx-auto">Un viaje fascinante a través de la física cuántica para despertar tu potencial ilimitado y transformar tu realidad</p>
   <div class="space-x-4">
     <button class="bg-orange-600 hover:bg-orange-700 px-8 py-3 rounded-lg font-semibold">¿Cómo Hacerlo?</button>
-    <button class="bg-blue-600 hover:bg-blue-700 px-8 py-3 rounded-lg font-semibold">Activar el Salto Cuántico</button>
+    <a href="https://amzn.eu/d/h6nj7OB" target="_blank" rel="noopener noreferrer">
+        <button class="bg-blue-600 hover:bg-blue-700 px-8 py-3 rounded-lg font-semibold">Activar el Salto Cuántico</button>
+    </a>
   </div>
  </div>
